@@ -3,26 +3,27 @@ package com.project.readers_community.service.impl;
 import com.project.readers_community.handelException.exception.BadReqException;
 import com.project.readers_community.handelException.exception.ForbiddenException;
 import com.project.readers_community.handelException.exception.NotFoundException;
+import com.project.readers_community.mapper.helper.AssistantHelper;
 import com.project.readers_community.model.common.MessageResponse;
 import com.project.readers_community.model.document.Book;
-import com.project.readers_community.model.document.Comment;
 import com.project.readers_community.model.document.Review;
-import com.project.readers_community.model.document.Status;
+import com.project.readers_community.model.dto.request.UpdateReviewRequest;
+import com.project.readers_community.model.dto.response.BookResponse;
+import com.project.readers_community.model.dto.response.UserResponse;
+import com.project.readers_community.model.enums.Status;
 import com.project.readers_community.model.document.User;
-import com.project.readers_community.model.dto.request.CommentRequest;
 import com.project.readers_community.model.dto.request.PostRequest;
 import com.project.readers_community.model.dto.request.ReviewRequest;
-import com.project.readers_community.model.dto.response.CommentResponse;
 import com.project.readers_community.model.dto.response.ReviewResponse;
-import com.project.readers_community.model.document.NotificationType;
+import com.project.readers_community.model.enums.NotificationType;
 import com.project.readers_community.repository.BookRepo;
-import com.project.readers_community.repository.PostRepo;
 import com.project.readers_community.repository.ReviewRepo;
 import com.project.readers_community.repository.UserRepo;
+import com.project.readers_community.service.BookService;
 import com.project.readers_community.service.NotificationService;
 import com.project.readers_community.mapper.ReviewMapper;
 import com.project.readers_community.service.ReviewService;
-import lombok.RequiredArgsConstructor;
+import com.project.readers_community.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -37,69 +38,56 @@ public class ReviewServiceImpl implements ReviewService {
     @Autowired
     private ReviewRepo reviewRepo;
     @Autowired
-    private BookRepo bookRepo;
+    private BookService bookService;
     @Autowired
-    private UserRepo userRepo;
+    private UserService userService;
     @Autowired
     private PostServiceImpl postServiceImpl;
     @Autowired
     private NotificationService notificationService;
-    @Autowired
-    private ReviewMapper reviewMapper;
 
     @Override
     public ReviewResponse create(ReviewRequest request, String userId) {
-        User user = userRepo.getById(userId);
-        if (user == null) {
-            throw new NotFoundException("User not found");
-        }
-        Book book = bookRepo.getById(request.getBookId());
-        if (book == null) {
-            throw new NotFoundException("Book not found");
-        }
-
-        Review review = reviewMapper.mapToDocument(request, userId);
+        Review review = ReviewMapper.mapToDocument(request, userId);
+        this.userService.getById(userId);
+        bookService.getById(review.getBook());
         Review savedReview = reviewRepo.save(review);
 
         updateBookReviewStats(review.getBook());
-        PostRequest postRequest = new PostRequest(review.getId());
-        postServiceImpl.create(postRequest, userId);
+//        PostRequest postRequest = new PostRequest(review.getId());
+//        postServiceImpl.create(postRequest, userId);
 
         // إنشاء إشعار إذا كان المستخدم مختلفًا عن صاحب الكتاب
-        if (!book.getAddedBy().equals(userId)) {
-            String message = user.getUsername() + "Reviewed your book.";
-            String bookId = review.getBook() ;
-            notificationService.createNotificationAsync(
-                    review.getUser(),
-                    userId,
-                    NotificationType.REVIEW_ON_BOOK,
-                    message,
-                    review.getId(),
-                    null,
-                    bookId,
-                    null
-            );
-        }
+        ///  notification for added by and save notfiy in table///
+//        if (!book.getAddedBy().equals(userId)) {
+//            String message = user.getUsername() + "Reviewed your book.";
+//            String bookId = review.getBook() ;
+//            notificationService.createNotificationAsync(
+//                    review.getUser(),
+//                    userId,
+//                    NotificationType.REVIEW_ON_BOOK,
+//                    message,
+//                    review.getId(),
+//                    null,
+//                    bookId,
+//                    null
+//            );
+//        }
 
-
-        return reviewMapper.mapToResponse(savedReview, userId);
+        return ReviewMapper.mapToResponse(savedReview);
     }
 
     @Override
     public ReviewResponse getById(String id) {
         Review review = reviewRepo.getById(id);
-        if (review == null || review.getStatus() != Status.ACTIVE) {
-            throw new NotFoundException("Review not found");
-        }
-        return reviewMapper.mapToResponse(review, null);
+        return ReviewMapper.mapToResponse(review);
     }
 
     @Override
     public List<ReviewResponse> getAll() {
         List<Review> reviews = reviewRepo.getAll();
         return reviews.stream()
-                .filter(review -> review.getStatus() == Status.ACTIVE)
-                .map(review -> reviewMapper.mapToResponse(review, null))
+                .map(ReviewMapper::mapToResponse)
                 .collect(Collectors.toList());
     }
 
@@ -107,20 +95,14 @@ public class ReviewServiceImpl implements ReviewService {
     public Page<ReviewResponse> getAllPage(int page, int size) {
         PageRequest pageRequest = PageRequest.of(page, size);
         Page<Review> reviews = reviewRepo.getAllPage(pageRequest);
-        return reviews.map(review -> {
-            if (review.getStatus() == Status.ACTIVE) {
-                return reviewMapper.mapToResponse(review, null);
-            }
-            return null;
-        });
+        return reviews.map(ReviewMapper::mapToResponse);
     }
 
     @Override
     public List<ReviewResponse> getByBookId(String bookId) {
         List<Review> reviews = reviewRepo.findByBookId(bookId);
         return reviews.stream()
-                .filter(review -> review.getStatus() == Status.ACTIVE)
-                .map(review -> reviewMapper.mapToResponse(review, null))
+                .map(ReviewMapper::mapToResponse)
                 .collect(Collectors.toList());
     }
 
@@ -129,20 +111,14 @@ public class ReviewServiceImpl implements ReviewService {
     public Page<ReviewResponse> getByBookIdPage(String bookId, int page, int size) {
         PageRequest pageRequest = PageRequest.of(page, size);
         Page<Review> reviews = reviewRepo.findByBookIdPage(bookId, pageRequest);
-        return reviews.map(review -> {
-            if (review.getStatus() == Status.ACTIVE) {
-                return reviewMapper.mapToResponse(review, null);
-            }
-            return null;
-        });
+        return reviews.map(ReviewMapper::mapToResponse);
     }
 
     @Override
     public List<ReviewResponse> getByUserId(String userId) {
         List<Review> reviews = reviewRepo.findByUserId(userId);
         return reviews.stream()
-                .filter(review -> review.getStatus() == Status.ACTIVE)
-                .map(review -> reviewMapper.mapToResponse(review, userId))
+                .map(ReviewMapper::mapToResponse)
                 .collect(Collectors.toList());
     }
 
@@ -151,86 +127,75 @@ public class ReviewServiceImpl implements ReviewService {
     public Page<ReviewResponse> getByUserIdPage(String userId, int page, int size) {
       PageRequest pageRequest = PageRequest.of(page, size);
         Page<Review> reviews = reviewRepo.findByUserIdPage(userId, pageRequest);
-        return reviews.map(review -> {
-            if (review.getStatus() == Status.ACTIVE) {
-                return reviewMapper.mapToResponse(review, userId);
-            }
-            return null;
-        });
+        return reviews.map(ReviewMapper::mapToResponse);
     }
 
     @Override
     public ReviewResponse likeReview(String id, String userId) {
-        Review review = reviewRepo.getByIdIfPresent(id)
-                .orElseThrow(() -> new NotFoundException("Review not found"));
+        Review review = reviewRepo.getById(id);
 
-        User user = userRepo.getById(userId);
-        if (user == null) {
-            throw new NotFoundException("User not found");
+        UserResponse user = userService.getById(userId);
+
+        if (review.getLikedBy().contains(userId)) {
+            review.getLikedBy().remove(userId);
+        } else {
+            review.getLikedBy().add(userId);
         }
 
-        review.getLikedBy().add(userId);
         Review updatedReview = reviewRepo.save(review);
 
-        if (!review.getUser().equals(userId)) {
-            String message = user.getUsername() + " liked your review.";
-            String bookId = review.getBook() ;
-            notificationService.createNotificationAsync(
-                    review.getUser(),
-                    userId,
-                    NotificationType.LIKE_REVIEW,
-                    message,
-                    review.getId(),
-                    null,
-                    bookId,
-                    null
-            );
-        }
 
-        return reviewMapper.mapToResponse(updatedReview, userId);
+        ///  notification for review user and save notfiy in table///
+//        if (!review.getUser().equals(userId)) {
+//            String message = user.getUsername() + " liked your review.";
+//            String bookId = review.getBook() ;
+//            notificationService.createNotificationAsync(
+//                    review.getUser(),
+//                    userId,
+//                    NotificationType.LIKE_REVIEW,
+//                    message,
+//                    review.getId(),
+//                    null,
+//                    bookId,
+//                    null
+//            );
+//        }
+
+        return ReviewMapper.mapToResponse(updatedReview);
     }
 
-
-
     @Override
-    public ReviewResponse update(String id, ReviewRequest request, String userId) {
-        Review review = reviewRepo.getByIdIfPresent(id)
-                .orElseThrow(() -> new NotFoundException("Review not found"));
+    public ReviewResponse update(String id, UpdateReviewRequest request, String userId) {
+        Review review = reviewRepo.getById(id);
 
         if (!review.getUser().equals(userId)) {
-            throw new ForbiddenException("You can only update your own reviews");
+            throw new BadReqException("You can only update your own reviews");
         }
 
-        Book book = bookRepo.getById(request.getBookId());
-        if (book == null) {
-            throw new NotFoundException("Book not found");
-        }
-
-        reviewMapper.updateDocument(review, request);
+        ReviewMapper.updateDocument(review, request);
         Review updatedReview = reviewRepo.save(review);
 
         updateBookReviewStats(review.getBook());
 
-        return reviewMapper.mapToResponse(updatedReview, userId);
+        return ReviewMapper.mapToResponse(updatedReview);
     }
 
     @Override
-    public ReviewResponse softDeleteById(String id, String userId) {
-        Review review = reviewRepo.getByIdIfPresent(id)
-                .orElseThrow(() -> new NotFoundException("Review not found"));
+    public MessageResponse softDeleteById(String id, String userId) {
+        Review review = reviewRepo.getById(id);
 
         if (!review.getUser().equals(userId)) {
-            throw new ForbiddenException("You can only delete your own reviews");
+            throw new BadReqException("You can only delete your own reviews");
         }
 
         review.setStatus(Status.DELETED);
         review.setDeletedAt(LocalDateTime.now());
 
-        Review updatedReview = reviewRepo.save(review);
+        reviewRepo.save(review);
 
         updateBookReviewStats(review.getBook());
 
-        return reviewMapper.mapToResponse(updatedReview, userId);
+        return AssistantHelper.toMessageResponse("Review deleted successfully");
     }
 
     @Override
@@ -239,31 +204,21 @@ public class ReviewServiceImpl implements ReviewService {
                 .orElseThrow(() -> new NotFoundException("Review not found"));
 
         if (!review.getUser().equals(userId)) {
-            throw new ForbiddenException("You can only delete your own reviews");
+            throw new BadReqException("You can only delete your own reviews");
         }
 
         reviewRepo.deleteById(id);
 
         updateBookReviewStats(review.getBook());
 
-        return MessageResponse.builder().message("Review deleted successfully").build();
+        return AssistantHelper.toMessageResponse("Review deleted successfully");
     }
 
     private void updateBookReviewStats(String bookId) {
         List<Review> activeReviews = reviewRepo.findByBookId(bookId)
                 .stream()
-                .filter(review -> review.getStatus() == Status.ACTIVE)
-                .collect(Collectors.toList());
-
-        int reviewCount = activeReviews.size();
-        Book book = bookRepo.getById(bookId);
-        book.setReviewCount(reviewCount);
-
-        double avgRating = reviewCount > 0
-                ? activeReviews.stream().mapToDouble(Review::getRating).average().orElse(0.0)
-                : 0.0;
-        book.setAvgRating(avgRating);
-
-        bookRepo.save(book);
+                .toList();
+        this.bookService.updateBookReviewAndRating(bookId, activeReviews.size(),
+                activeReviews.stream().mapToDouble(Review::getRating).sum());
     }
 }
